--- a/front.html
+++ b/front.html
@@ -60,7 +60,7 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="row p-2">
+        <div class="row py-2 pe-4">
 
             <!-- <div class="card col-lg-4 col-md-4 col-sm-12 p-2 text-center text-white">
                 <div class="green-bg p-2 pt-2">
