--- a/front.html
+++ b/front.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <title>oll Card | Front</title>
     <style>
+        /* start print stuff */
         @page {
             size: A3 portrait;
             margin: 0;
@@ -17,13 +18,14 @@
             background: #fff;
             padding: 30px 0;
         }
-
+        
         html {
             background: #aaa;
             display: flex;
             justify-content: center;
             align-items: center;
         }
+        /* end print stuff */
 
         .card {
             line-height: normal;
@@ -35,6 +37,12 @@
             middle;
             justify-content: center;
         }
+        
+        #card:nth-child(2n + 21) {
+            border-bottom: 5px solid #193f1a;
+            /* break-after: page; */
+        }
+
         .card-inner {
             height: 160px;
             width: 100%;
@@ -148,8 +156,10 @@
 for (let index = 0; index < 50; index++) {
             document.getElementById('card').innerHTML += html;
 
-            // if (index !== 0 && index % 504) {
-            //     $('#card').append(`<br> <br>`);
+            // if (index === 15) {
+            //     // console.log(index + ' is the number of cards')
+            //     document.querySelector('.card').style.breakAfter = 'page';
+            //     // $('#card').append(`<br> <br>`);
             // }
         }
     </script>
